# blog

./: .gitignore  LICENSE  README.md
01_top_python_builtins/: README.md
02_multiprocessing_tips/: .gitignore  MCF7_Cell_Painting_nuclei_detection.ipynb  README.md
03_python_CLI_example/: README.md  setup.py
03_python_CLI_example/starfox/: main.py  quotes.py
04_poetry_quickstart/: README.md  steps.md
04_poetry_quickstart/math-demo/: README.rst  environment.yaml  pyproject.toml
04_poetry_quickstart/math-demo/math_demo/: hyperbolic.py
04_poetry_quickstart/math-demo/tests/: test_math_demo.py
05_python_autoformatting/: README.md
05_python_linting/: .gitignore  README.md  linting_and_autoformatting.py
06_notebooks_in_github/: README.md  autoformatting.ipynb
06_notebooks_on_github/: README.md  autoformatting.ipynb  notebook_formatting.ipynb
07_notebooks_in_github/: README.md
07_part1_vertex_ai_mnist/: README.md
07_pretrained_image_embeddings/: README.md  blog_post.md  environment.yml  pyproject.toml
07_pretrained_image_embeddings/data/: dog.npy  dog.npz
07_pretrained_image_embeddings/embedding/: __init__.py  cli.py  embed.py  io.py  plot.py  sample.py
07_pretrained_image_embeddings/tests/: test_embedding.py
08_hue_lights_automation/: README.md
08_part2_vertex_ai_mnist/: README.md
09_goofys_filesystem_mount/: README.md
10_dashboards_with_dash/: README.md
youtube_downloader/: README.md
